--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.6.10"
+    "vee-validate": "^2.2.15",
+    "vue": "^2.6.10",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-service": "^3.10.0",
